lots of safe type casts through whole code base